New design, change currency, change time frame, add micromodal

--- a/src/scss/components/_vars.scss
+++ b/src/scss/components/_vars.scss
@@ -1,3 +1,9 @@
+// Brand colors
+//
+// Used commonly on the site
+$brand-main: #7231BC; // ffc300 41EAD4
+$brand-secondary: #31BC6D; // c31bc43
+
 // Main paint colors
 //
 // Used for most website elements
@@ -6,12 +12,7 @@ $regular-text-color: #292929;
 $bold-text-color: #000;
 $border-color: #dedede;
 $bold-bg: #fff;
-
-// Brand colors
-//
-// Used commonly on the site
-$brand-main: #00ace5;
-$brand-secondary: #d81536;
+$accented-bg: mix($brand-main, #fff, 10%);
 
 // Other colors
 //
@@ -30,3 +31,4 @@ $layers: root, contentpush, sticky, navroot, navlist, navtop, modal;
 
 // Shadows
 $shadow1: 0 0.125rem 0.25rem rgba(#000, 0.2);
+$shadow2: 0 0.4rem 2rem rgba(#000, 0.25);
