New homepage, new legal docal docs, new feature tour, plus other changes

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -8,7 +8,7 @@
   <div class="article__details">
     <a href="{{ .Permalink }}"></a>
     <h1 class="h2 center"><b>
-      <a href="{{ .Permalink }}" class="silent">{{ .Title }}</a>
+      <a href="{{ .Permalink }}" class="bold">{{ .Title }}</a>
     </b></h1>
     <p class="center ingrained">a {{ .ReadingTime }} minute read by Mantas Vilčinskas on {{ .Date.Format "January 2, 2006" }}</p>
 
