--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -43,7 +43,7 @@
   <div class="row mobile-row padded-row center-mobile">
     <figure class="col">
       <a href="/#">
-        <img src="/logo.png" class="footer__logo">
+        <img src="/logo.svg" class="footer__logo">
       </a>
 
       <div class="break-sm"></div>
@@ -82,7 +82,7 @@
 
       <!-- Legal -->
       <div class="break-sm"></div>
-      <p class="ingrained">&copy; {{ now.Year }}<br>
+      <p class="ingrained">Copyright {{ now.Year }}<br>
       <span class="ingrained">Some rights reserved</span></p>
     </figure>
     <figure class="col-fifth center-mobile">
@@ -151,6 +151,8 @@ html .crisp-client .crisp-1 .crisp-40 .crisp-42 .crisp-112 .crisp-113 .crisp-145
 html .crisp-client .crisp-1 .crisp-40 .crisp-42 .crisp-112 .crisp-113 .crisp-114 {
     bottom: 56px !important;
 }
+
+html .crisp-client .crisp-1 .crisp-95, .crisp-client .crisp-1 .crisp-95 * { font-family: 'Montserrat', sans-serif !important; }
 </style>
 
 </body></html>
