--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -12,15 +12,33 @@
     <meta property="og:type" content="website">
     <meta name="generator" content="Hugo {{ .Hugo.Version }}">
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/favicon/apple-touch-icon-152x152.png">
+    <link rel="icon" type="image/png" href="/favicon/favicon-196x196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/favicon/favicon-128.png" sizes="128x128">
+    <meta name="application-name" content="Chorale">
+    <meta name="msapplication-TileColor" content="#fff">
+    <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
+    <meta name="msapplication-square70x70logo" content="/favicon/mstile-70x70.png">
+    <meta name="msapplication-square150x150logo" content="/favicon/mstile-150x150.png">
+    <meta name="msapplication-wide310x150logo" content="/favicon/mstile-310x150.png">
+    <meta name="msapplication-square310x310logo" content="/favicon/mstile-310x310.png">
     <!-- Metadata -->
-  <title>{{ if eq .Title .Site.Title }}{{ .Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
+    <title>{{ if eq .Title .Site.Title }}{{ .Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
     <meta property="og:title" content="{{ .Title }}">
     <meta name="description" content="{{ if .Params.description }}{{ .Params.description }}{{ else }}{{ .Site.Params.description }}{{ end }}">
     <meta name="canonical" content="{{ .Permalink }}">
-    <meta name="theme-color" content="#dedede">
+    <meta name="theme-color" content="#{{ if .Params.color }}{{ .Params.color }}{{ else }}{{ if eq .Title .Site.Title }}2a2a2a{{ else }}dedede{{ end }}{{ end }}">
   </head>
