--- a/layouts/partials/nav-items.html
+++ b/layouts/partials/nav-items.html
@@ -1,5 +1,4 @@
 <li><a href="/tour">Features</a></li>
 <li><a href="/pricing">Pricing</a></li>
 <li><a href="/creators">Creators</a></li>
-<li><a href="/community">Community</a></li>
-<li class="nav-bar__list--last-item"><a href="/contribute">Contribute</a></li>
+<li class="nav-bar__list--last-item"><a href="/community">Community</a></li>
