--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -3,7 +3,7 @@
     <ul class="nav-bar__list">
       <li class="nav-bar__logo">
         <a href="/#">
-          <img src="/logo-black.png">
+          <img src="/logo-black.svg">
         </a>
       </li>
 
@@ -21,7 +21,7 @@
 
 <nav class="nav-mobile">
   <a href="/#" class="nav-mobile__logo">
-    <img src="/logo-black.png">
+    <img src="/logo-black.svg">
   </a>
 
   <svg class="nav-mobile__menu" viewBox="0 0 24 24">
