--- a/src/scss/components/dropins.scss
+++ b/src/scss/components/dropins.scss
@@ -10,6 +10,14 @@
   }
 }
 
+// Small line
+.small-line {
+  height: 0.1rem;
+  width: 3rem;
+  margin: 2rem 0;
+  background: currentColor;
+}
+
 // Prettier underline
 u {
   text-decoration: none;
@@ -34,6 +42,7 @@ u {
 
     &::before {
       content: " · ";
+      font-weight: bold;
       padding: 0 0.5rem;
     }
   }
@@ -47,12 +56,6 @@ u {
   display: block;
 
   &--narrow { max-width: 42rem; }
-}
-
-@media (max-width: 768px) {
-  .mobile-row figure, .mobile-row .col {
-    margin-bottom: 2.5rem;
-  }
 }
 
 .padded-row .col {
@@ -89,9 +92,12 @@ u {
 
 // Text
 .silent {
-  color: $bold-text-color;
+  color: #fff;
   &:hover { color: $brand-main; }
 }
+
+.white { color: #fff; svg path { fill: #fff; } }
+
 .bold { color: $bold-text-color; }
 .highlighted {
   color: $brand-main;
@@ -121,4 +127,128 @@ u {
 // On mobile
 @media (max-width: 768px) {
   .center-mobile { text-align: center; }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**
+ * Homepage
+ */
+
+.hero {
+  height: 100vh;
+  background-size: cover;
+  color: #fff;
+  display: table-cell;
+  vertical-align: middle;
+  width: 100vw;
+  background-color: #1b1b1b;
+
+  // when using poly masks, padding gets messed up
+  &--cut-fix {
+    padding-bottom: 8rem;
+  }
+
+  .btn--border {
+    color: #fff;
+
+    &:hover { color: #d5d5d5; }
+  }
+
+  &--light {
+    color: #000;
+
+    a { color: #000; }
+
+    .btn--primary {
+      background: #000;
+      color: #fff;
+
+      &:hover { background: #292929; }
+    }
+
+    .btn { color: #fff; }
+
+    .btn--border {
+      color: #000;
+
+      &:hover { color: #292929; }
+    }
+  }
+
+  &--transparent { background-color: transparent; }
+  &--branded { background-image: linear-gradient(90deg, $brand-secondary, $brand-main); }
+}
+
+// Make sure container fits on screen
+@media (max-width: 640px) {
+  .hero__container {
+    max-width: 80%;
+  }
+}
+
+@media (max-height: 768px) {
+  .hero {
+    padding: 3.5rem 1rem;
+    padding-bottom: 4rem;
+  }
+}
+
+@media (max-height: 600px) {
+  .hero__container {
+    max-width: 90%;
+  }
+  .hero .h1 { font-size: 1.8rem; }
+  .btn { padding: 0.4rem 0.6rem; }
+}
+
+@media (max-height: 480px) {
+  .hero__container {
+    max-width: 90%;
+  }
+  .btn { padding: 0.2rem 0.6rem; }
+}
+
+.basic-hero {
+  padding: 6rem 0;
+  color: $bold-text-color;
+  border-bottom: 0.1rem solid #303030;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  .mobile-row figure, .mobile-row .col {
+    margin-bottom: 2.5rem;
+  }
+
+  .large-vw-only { display: none; }
+}
+
+@media (min-width: 768px) {
+  .small-vw-only { display: none; }
 }
